# ui_guido

./: .gitignore  Cargo.toml
src/: gamepad.rs  lib.rs  main.rs  robot.rs  textures.rs  visualizer.rs  wrapper.rs
src/visualizer/: mod.rs  textures.rs
src/visualizer/components/: contents_map.rs  dialog.rs  mod.rs  player.rs  tails_map.rs
