[package]
name = "ui_guido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
midgard = { version = "0.1.3", registry = "kellnr" }
rand = "0.8.5"
robotics_lib = { version = "0.1.21", registry = "kellnr" }
rust_eze_spotlight = { version = "1.1.1", registry = "kellnr" }
rust_eze_tomtom = { version = "1.1.7", registry = "kellnr" }

