[package]
name = "ui_guido"
version = "1.0.0"
authors = ["Andreolli Davide"]
description = "An alternative UI for runnable robotics"
repository = "https://github.com/rust-eze-robotics/ui_guido"
keywords = ["robotics_lib", "ui", "ggez", "midgard"]
edition = "2021"

[[bin]]
name = "ui_guido"
path = "src/main.rs"

[dependencies]
ggez = "0.9.3"
midgard = { version = "0.2.1", registry = "kellnr" }
rand = "0.8.5"
robotics_lib = { version = "0.1.21", registry = "kellnr" }
rust_eze_spotlight = { version = "1.1.1", registry = "kellnr" }
rust_eze_tomtom = { version = "1.1.7", registry = "kellnr" }
ui_lib = { git = "https://github.com/rust-eze-robotics/ui_lib", branch = "main" }
rusteze_ai_artemisia = { git = "https://github.com/rust-eze-robotics/ai_artemisia", branch = "main" }
ai_builder = { git = "https://github.com/rust-eze-robotics/ai_builder.git", branch = "main" }
